Aggiunte api a swagger
